# otel-tutorial

./: .gitignore  README.md  pyproject.toml
dependencies/: Dockerfile  requirements.txt
src/: otel_config.py  pizza_api.py  pizza_helpers.py  pizza_menu.json
stream/: stream_pizza_api.py  stream_pizza_helpers.py
tests/: sample_pizza_orders.json
tests/shell_scripts/: run_local_test.sh  run_signoz_test.sh
tests/unit_tests/: stream_test_pizza_api.py  test_pizza_api.py
